--- a/style.css
+++ b/style.css
@@ -280,7 +280,103 @@ a:hover {
     color: #0056b3;
 }
 
+/* Estilos para el ícono de carrito en la barra de navegación */
+.navbar-nav .nav-link {
+    padding: 0.5rem 1rem;
+    color: #fff;
+}
+
+.navbar-nav .nav-link:hover {
+    background: #333;
+}
+
+/* Estilos para el ícono de carrito */
+.fa-shopping-cart {
+    font-size: 1.5rem;
+    margin-right: 5px;
+}
+
+/* Estilo para el botón "Añadir al carrito" */
+.añadir-al-carrito {
+    background-color: #007bff; /* Color de fondo del botón */
+    color: #fff; /* Color de texto del botón */
+    padding: 10px 20px; /* Espaciado interno del botón */
+    border: none; /* Elimina el borde del botón */
+    border-radius: 5px; /* Añade esquinas redondeadas al botón */
+    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+}
+
+/* Estilo al pasar el cursor sobre el botón */
+.añadir-al-carrito:hover {
+    background-color: #0056b3; /* Cambia el color de fondo al pasar el cursor */
+}
+
+/* Estilos para la ventana emergente del carrito */
+.carrito-popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    overflow: auto;
+}
+
+.carrito-content {
+    background-color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.carrito-cerrar {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 10px;
+    cursor: pointer;
+}
 
 
+.eliminar-container {
+    display: block; /* Asegura que los botones estén en bloques separados */
+    margin-top: 5px; /* Espacio superior entre los botones */
+}
 
+.eliminar-producto {
+    background-color: #ff0000; /* Color de fondo rojo */
+    color: #fff; /* Color del texto blanco */
+    border: none; /* Sin borde */
+    border-radius: 50%; /* Forma redondeada (para que parezca un botón) */
+    width: 24px; /* Ancho del botón */
+    height: 24px; /* Altura del botón */
+    font-size: 14px; /* Tamaño del texto */
+    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+}
+
+.eliminar-producto:hover {
+    background-color: #ff3333; /* Cambia el color de fondo al pasar sobre el botón */
+}
+
+  
+
+  #calcular-total {
+    background-color: #007bff; /* Color de fondo del botón */
+    color: #fff; /* Color de texto del botón */
+    padding: 10px 20px; /* Espaciado interno del botón */
+    border: none; /* Elimina el borde del botón */
+    border-radius: 5px; /* Añade esquinas redondeadas al botón */
+    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+}
+
+#calcular-total:hover {
+    background-color: #0056b3; /* Cambia el color de fondo al pasar el cursor */
+}
 
